--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
       <li>Vitae fugit delectus repellendus officiis provident labore aliquam distinctio ipsam.</li>
     </ul>
   </div>
+  <div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur suscipit autem facere. Cupiditate, rerum sunt.
+  </div>
 </body>
 </html>
