FE-79 header list added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 
 <body>
-  test
+  <header>
+    <h1>Lorem ipsum dolor sit amet.</h1>
+  </header>
+  <section>
+  <ul>
+      <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis, esse quod amet provident voluptatem earum commodi deleniti distinctio consectetur quam, dolorem id accusamus, sunt architecto quos eius! Tenetur, minima ipsam.</li>
+      <li>Nobis, maxime, laboriosam amet commodi, neque corrupti odio nisi consequuntur molestias et inventore culpa recusandae doloribus velit dicta dolor. Ex optio, tempora beatae itaque atque consequuntur cum aspernatur dolor maiores?</li>
+      <li>Eligendi aliquid magni libero itaque ad quasi cum aspernatur expedita provident? Delectus magnam totam sint odio quos inventore repudiandae! Rem dolorem quod dolorum at voluptatibus velit vero magni iusto facilis.</li>
+      <li>Beatae ex ullam labore quos quae quasi soluta illo fugit, totam in, incidunt doloribus sint voluptas facilis id doloremque accusamus? Corrupti vero ipsam culpa aperiam sint velit, et nemo consectetur.</li>
+      <li>Officia tempore illo nihil in? Natus perferendis omnis at excepturi accusantium cupiditate beatae illum veritatis architecto, ea nihil id eligendi in, deserunt veniam. Accusamus eaque debitis recusandae quos. Ab, assumenda?</li>
+      <li>asdsad</li>
+  </ul>
+  </section>
 </body>
 
 </html>
