--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
       <li>asdsad</li>
   </ul>
   </section>
+  <aside>
+    <ul>
+      <li>Lorem ipsum dolor sit.</li>
+      <li>Quam aperiam praesentium molestias.</li>
+      <li>Veniam assumenda exercitationem aperiam.</li>
+      <li>Beatae id accusantium maiores.</li>
+      <li>Porro possimus nihil ipsam.</li>
+      <li>Ea voluptates itaque amet.</li>
+      <li>Iure illo et ipsum.</li>
+      <li>Possimus ipsa in tenetur.</li>
+      <li>Dolorem illum hic exercitationem!</li>
+      <li>Dolorem nihil vel mollitia?</li>
+    </ul>
+
+  </aside>
 </body>
 
 </html>
