--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     </ul>
 
   </aside>
+  <footer>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi eos in at quasi odio cumque atque, explicabo cupiditate placeat et.
+  </footer>
 </body>
 
 </html>
