--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1>Lorem ipsum dolor sit amet.</h1>
+    <h1>Lorem ipsum dolor sit Ahmet.</h1>
   </header>
   <section>
   <ul>
